--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,2 +1,12 @@
 # Enable mouse support for scrolling and selecting panes/windows
 set -g mouse on
+
+# Copy selected text to system clipboard with xsel when pressing y or Enter
+bind-key -T copy-mode-vi y send -X copy-pipe "xsel -i --clipboard"
+bind-key -T copy-mode-vi Enter send -X copy-pipe "xsel -i --clipboard"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
