--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,2 +1,15 @@
 # Enable mouse support
 set -g mouse on
+
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# Setup 'y' to yank (copy) text to the system clipboard
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -b"
+
+# Update default binding of Enter to also use copy-pipe
+unbind-key -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i -b"
+
+# Bind ']' to paste from system clipboard
+bind ] run "xsel -o -b | tmux load-buffer - ; tmux paste-buffer"
